<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_listings"
        android:icon="@drawable/ic_listings"
        android:title="@string/title_listings" />

    <item
        android:id="@+id/navigation_featured"
        android:icon="@drawable/ic_baseline_star_border_24"
        android:title="@string/title_featured" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_categories"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>