<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.farmtender.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.example.farmtender.fragments.categories.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_listings" />

    <fragment
        android:id="@+id/navigation_listings"
        android:name="com.example.farmtender.fragments.listings.ListingsFragment"
        android:label="@string/title_listings"
        tools:layout="@layout/fragment_listings" />
    <fragment
        android:id="@+id/navigation_featured"
        android:name="com.example.farmtender.fragments.featured.FeaturedFragment"
        android:label="@string/title_featured"
        tools:layout="@layout/fragment_featured" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.farmtender.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>