<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="34dp"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="34dp"
            android:layout_marginRight="24dp"
            android:backgroundTint="@color/black"
            app:boxStrokeColor="@color/lightGrey"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_bottom_line"
                android:hint="@string/first_name"
                android:textCursorDrawable="@null"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="159dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="34dp"
            android:layout_marginRight="24dp"
            android:backgroundTint="@color/black"
            app:boxStrokeColor="@color/lightGrey"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_bottom_line"
                android:hint="@string/last_name"
                android:textCursorDrawable="@null"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="159dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="34dp"
            android:layout_marginRight="24dp"
            android:backgroundTint="@color/black"
            app:boxStrokeColor="@color/lightGrey"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobileText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_bottom_line"
                android:hint="@string/mobile"
                android:inputType="number"
                android:textCursorDrawable="@null"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="159dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="34dp"
            android:layout_marginRight="24dp"
            android:backgroundTint="@color/black"
            app:boxStrokeColor="@color/lightGrey"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_bottom_line"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@null"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="159dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="34dp"
            android:layout_marginRight="24dp"
            android:backgroundTint="@color/black"
            app:boxStrokeColor="@color/lightGrey"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_bottom_line"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textCursorDrawable="@null"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="159dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="34dp"
            android:layout_marginRight="24dp"
            android:backgroundTint="@color/black"
            app:boxStrokeColor="@color/lightGrey"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_bottom_line"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textCursorDrawable="@null"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="159dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="34dp"
            android:layout_marginRight="24dp"
            android:backgroundTint="@color/black"
            app:boxStrokeColor="@color/lightGrey"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addressText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_bottom_line"
                android:hint="@string/street_address"
                android:textCursorDrawable="@null"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="159dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/postal_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="34dp"
            android:layout_marginRight="24dp"
            android:backgroundTint="@color/black"
            app:boxStrokeColor="@color/lightGrey"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postalCodeText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_bottom_line"
                android:hint="@string/postal_code"
                android:inputType="number"
                android:textCursorDrawable="@null"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="159dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="34dp"
            android:layout_marginRight="24dp"
            android:backgroundTint="@color/black"
            app:boxStrokeColor="@color/lightGrey"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:onClick="onStateClicked"
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_bottom_line"
                android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
                android:enabled="true"
                android:focusable="false"
                android:hint="@string/state"
                android:textCursorDrawable="@null"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="159dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/business_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="34dp"
            android:layout_marginRight="24dp"
            android:backgroundTint="@color/black"
            app:boxStrokeColor="@color/lightGrey"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_bottom_line"
                android:hint="@string/business_name"
                android:textCursorDrawable="@null"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="159dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/abn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="34dp"
            android:layout_marginRight="24dp"
            android:backgroundTint="@color/black"
            app:boxStrokeColor="@color/lightGrey"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_bottom_line"
                android:hint="@string/abn"
                android:textCursorDrawable="@null"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="159dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ngr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="34dp"
            android:layout_marginRight="24dp"
            android:backgroundTint="@color/black"
            app:boxStrokeColor="@color/lightGrey"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_bottom_line"
                android:hint="@string/ngr"
                android:textCursorDrawable="@null"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="159dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:buttonTint="@color/green"
            android:text="@string/terms"
            android:textSize="16sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:buttonTint="@color/green"
            android:text="Subscribe to NewsLetter"
            android:textSize="16sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_marginBottom="24dp"
            android:onClick="onRegisterClicked"
            android:background="@color/disabledButtonColor"
            android:text="Register"
            android:textColor="#EDD32A"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>